# RL-101

./: .gitignore  project_structure.md  pyproject.toml
RL_101.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dobot_xtrainer_diffusion_v1.0.0/: version.txt
dobot_xtrainer_diffusion_v1.0.0/ModelTrain/: LICENSE  constants.py  model_inference_test.py  model_train.py
dobot_xtrainer_diffusion_v1.0.0/ModelTrain/module/: model_module.py  policy.py  train_module.py  utils.py
dobot_xtrainer_diffusion_v1.0.0/experiments/: run_control.py  run_inference.py
dobot_xtrainer_diffusion_v1.0.0/experiments/logs/: align
dobot_xtrainer_diffusion_v1.0.0/logs/: align
dobot_xtrainer_diffusion_v1.0.0/robomimic-r2d2/robomimic/algo/: diffusion_policy.py
dobot_xtrainer_diffusion_v1.0.0/scripts/: 4_collect2train_data.py  6_dataset_count.py  constants.py  manipulate_utils.py
dobot_xtrainer_diffusion_v1.0.0/scripts/dobot_config/: dobot_settings.ini
offline/src/data/: offline_buffer.py
offline/src/models/: critics.py
