[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RL-101"
version = "0.1.0"
description = "RL framework"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

dependencies = [
  "numpy==1.26.4",
  "scipy>=1.11,<1.13",
  "opencv-python>=4.8",
  "hydra-core>=1.3",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["d3il*", "offline*", "dppo*"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.1.9",
  "black>=23.12",
  "ipykernel>=6.25",
]
viz = [
  "matplotlib>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
